# ALife

./: CMakeLists.txt  README.md
assets/patterns/conway/: glider.json  pulsar.json  spaceship.json
assets/patterns/lenia/: aquarium.json  emitter.json  feeder.json  fish.json  hydrogeminium.json  orbium.json  wanderer.json
assets/presets/conway/: glider.json  pulsar.json  spaceship.json
assets/presets/lenia/: aquarium.json  emitter.json  feeder.json  fish.json  hydrogeminium.json  orbium.json  wanderer.json
scripts/: run.sh
src/: app.cpp  app.hpp  main.cpp
src/alife/: alife.hpp  constraint.hpp  integrator.hpp  observation.hpp  updaterule.hpp
src/alife/constraints/: binary.hpp  binary_constraint.hpp  clamp.hpp  sigmoid.hpp
src/alife/integrators/: discrete_integrator.hpp  euler.hpp  euler_integrator.hpp
src/alife/observations/: channel_convolution.hpp  conv_observation.hpp  fft_convolution.hpp  nbr_observation.hpp  neighbour.hpp  smooth_observation.hpp
src/alife/rules/: conway_rule.hpp  larger_than_life_rule.hpp  lenia.hpp  smoothlife_rule.hpp
src/config/: kernel_from_config.hpp  sim_preset.hpp  sim_preset_loader.cpp  sim_preset_loader.hpp
src/core/: fft2d.hpp  fft_convolution.hpp  grid.hpp  kernel.hpp  pattern.hpp  state.hpp
src/patterns/: pattern.hpp  pattern_loader.hpp  pattern_preset.hpp
src/render/: SFMLrenderer.hpp  renderer.hpp  sfml_renderer.cpp  sfml_renderer.hpp
src/systems/: conway.hpp  larger_than_life.hpp  lenia.hpp  smoothlife.hpp  system_type.hpp
src/systems/lenia/: interaction.hpp  lenia.hpp
